--- a/descriptive_statistics/results.html
+++ b/descriptive_statistics/results.html
@@ -24,6 +24,101 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <i class="fa fa-calculator"></i>
+          Omnicalc
+        </a>
+      </div>
+    </div>
+  </nav>
 
-</body>
-</html>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="list-group">
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/word_count/new.html" class="list-group-item">
+            <i class="fa fa-book"></i>
+            Word Count
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/loan_payment/new.html" class="list-group-item">
+            <i class="fa fa-money"></i>
+            Loan Payment
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/time_between/new.html" class="list-group-item">
+            <i class="fa fa-clock-o"></i>
+            Time Between
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/descriptive_statistics/new.html" class="list-group-item">
+            <i class="fa fa-bar-chart"></i>
+            Descriptive Statistics
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-9">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+            Descriptive Statistics Results
+            </h3>
+          </div>
+          <div class="panel-body">
+
+            <div class="panel-body">
+              <dl class="dl-horizontal">
+                <dt>Numbers</dt>
+                <dd>[]</dd>
+
+                <dt>Sorted Numbers</dt>
+                <dd>[]</dd>
+
+                <dt>Count</dt>
+                <dd>0</dd>
+
+                <dt>Minimum</dt>
+                <dd></dd>
+
+                <dt>Maximum</dt>
+                <dd></dd>
+
+                <dt>Range</dt>
+                <dd></dd>
+
+                <dt>Median</dt>
+                <dd></dd>
+
+                <dt>Sum</dt>
+                <dd></dd>
+
+                <dt>Mean</dt>
+                <dd></dd>
+
+                <dt>Variance</dt>
+                <dd></dd>
+
+                <dt>Standard Deviation</dt>
+                <dd></dd>
+
+                <dt>Mode</dt>
+                <dd></dd>
+              </dl>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </body>
+  </html>
