--- a/loan_payment/new.html
+++ b/loan_payment/new.html
@@ -24,6 +24,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <i class="fa fa-calculator"></i>
+          Omnicalc
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="list-group">
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/word_count/new.html" class="list-group-item">
+            <i class="fa fa-book"></i>
+            Word Count
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/loan_payment/new.html" class="list-group-item">
+            <i class="fa fa-money"></i>
+            Loan Payment
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/time_between/new.html" class="list-group-item">
+            <i class="fa fa-clock-o"></i>
+            Time Between
+          </a>
+          <a href="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/descriptive_statistics/new.html" class="list-group-item">
+            <i class="fa fa-bar-chart"></i>
+            Descriptive Statistics
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-9">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+              New Loan Payment Calculation
+            </h3>
+          </div>
+          <div class="panel-body">
+
+            <form action="C:/Users/jlipes/Transporter/Application%20Development/Code/omnicalc_mockups/loan_payment/results.html" class="form-horizontal">
+
+              <div class="form-group">
+                <label for="user_word" class="col-sm-2 control-label">APR</label>
+                <div class="col-sm-10">
+                  <input name="user_word" type="name" class="form-control" id="user_word" placeholder="Enter the APR of the loan (as a percent)">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="user_word" class="col-sm-2 control-label">Years</label>
+                <div class="col-sm-10">
+                  <input name="user_word" type="name" class="form-control" id="user_word" placeholder="Enter the number of years to repay the loan">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="user_word" class="col-sm-2 control-label">Principal</label>
+                <div class="col-sm-10">
+                  <input name="user_word" type="name" class="form-control" id="user_word" placeholder="Enter the principal of the loan">
+                </div>
+              </div>
+
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-primary btn-block">Submit
+                  </button>
+                </div>
+              </div>
+
+            </form>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
